fixed html for hello copy

--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
 		<div class="hello">
 			<a id="hello-link"> </a>
 			<div class="hello-title">Hello,</div>
-			<div class="hello-copy-intro">
+			<div class="hello-copy">
 				<p>My name is Jessie (she/her).
-					I'm a Taiwanese-Canadian product designer from Vancouver, currently living as a polite expat in San Francisco.</p>
-			</div>
-			<div class="hello-copy-now">I design <a class="link" href="#dx-link">developer experience</a> for Apple.
-			</div>
-			<div class="hello-copy-before">
+					I'm a Taiwanese-Canadian product designer from Vancouver, currently living as a polite expat in San Francisco.</p><br>
+					I design <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
 				<p>Previously, I created <a class="link" href="#aviation-link">aviation analytics products</a> for Boeing,
 					built <a class="link" href="#dataviz-link">data visualization</a>, and
 					conducted research in <a class="link" href="#vision-science-link">vision science</a>.
-				</p>
+				</p><br>
+				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
 			<div class="hello-copy-disclaimer">Due to NDAs, you won't find details of my work
 				on B2B solutions and internal platforms here. <a class="link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
