fixed link styles and hover styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
 			<div class="hello-copy-disclaimer">Due to NDAs, you won't find details of my work
-				on B2B solutions and internal platforms here. <a class="link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
+				on B2B solutions and internal platforms here. <a class="body-link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
 		</div>
 		<!---------------------------TL;DR------------------------->
 		<div class="tldr">
@@ -30,8 +30,8 @@
 				<div class="tldr-title">TL;DR</div>
 			<div class="tldr-copy">
 				<p>I’m a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
-					monolithic enterprise.<br><br> I’ve designed complex systems, often involving lots and lots of data.<br><br>
-					(Un)fortunately having been a lone designer for most of my career, I'm also very much a researcher, project manager, product owner,
+					monolithic enterprise.<br><br> I’ve designed complex systems, often involving lots of data.<br><br>
+					(Un)fortunately, I've been a team-of-one designer for most of my career. This means I'm also very much a researcher, project manager, product owner,
 					visual designer, and design evangelist.</p>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 				<h1>Developer Experience</h1>
 			</div>
 			<div class="dx-copy">
-				<p>At Apple, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
+				<p>At <a class="body-link" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="dx">
 			</div>
 		</div>
@@ -53,7 +53,7 @@
 				<h1>Aviation</h1>
 			</div>
 			<div class="aviation-copy">
-				<p>At <a class="link" href="https://boeing.com">Boeing</a>, I created analysis and data visualization tools to help engineers and analysts do more with their data.</p>
+				<p>At <a class="body-link" href="https://boeing.com">Boeing</a>, I created analysis and data visualization tools to help engineers and analysts do more with their data.</p>
 				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
 			</div>
 		</div>
@@ -66,7 +66,7 @@
 			<div class="dataviz-copy">
 				<p>As a data designer for an atomic startup, I created many interactive data dashboards for our primary client, Boeing.</p>
 				<img class="dataviz-img" src="images/dataviz.svg" alt="dataviz">
-				<p>Outside of client work, I had a lot of fun creating <a class="link" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
+				<p>Outside of client work, I had a lot of fun creating <a class="body-link" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
 					to promote our company in the open data community.</p><br>
 				<p>Here, I refined my own design and development process, learned to roll with the ambiguity and chaos that is
 					startup life, and also leveled up in navigating the intricacies of a massive organization like Boeing.</p>
@@ -79,8 +79,8 @@
 				<h1>Vision Science</h1>
 			</div>
 			<div class="vision-science-copy">
-				<p>At the <a class="link" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
-					<a class="link" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and worked on research projects
+				<p>At the <a class="body-link" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
+					<a class="body-link" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and worked on research projects
 					that explored interesting quirks with human visual perception.</p><br>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="vision-science">
 				<p>On one project, we created data visualization using radical encodings such as luminance and orientation,
@@ -95,11 +95,11 @@
 	<div class="navigation">
 
 		<nav class="nav">
-			<p> <a class="nav-link" href="#hello-link">Hello</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-					<a class="nav-link" href="#tldr-link">TL;DR</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-					<a class="nav-link" href="#dx-link">DX</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-					<a class="nav-link" href="#aviation-link">Aviation</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
-					<a class="nav-link" href="#dataviz-link">DataViz</a>&nbsp;&nbsp;&bull;&nbsp;&nbsp;
+			<p> <a class="nav-link" href="#hello-link">Hello</a>&nbsp;&bull;
+					<a class="nav-link" href="#tldr-link">TL;DR</a>&nbsp;&bull;
+					<a class="nav-link" href="#dx-link">DX</a>&nbsp;&bull;
+					<a class="nav-link" href="#aviation-link">Aviation</a>&nbsp;&bull;
+					<a class="nav-link" href="#dataviz-link">DataViz</a>&nbsp;&bull;
 					<a class="nav-link" href="#vision-science-link">Vision Science</a>
 			</p>
 		</nav>
