cleaned up fixed font sizing, refactored layout code, refactored bottom navigation, inserted all content

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 			<a id="tldr-link"> </a>
 				<div class="tldr-title">TL;DR</div>
 			<div class="tldr-copy">
-				<p>I’m a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
-					monolithic enterprise.<br><br> I’ve designed complex systems, often involving lots of data.<br><br>
+				<p>I'm a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
+					monolithic enterprise.<br><br> I've designed complex systems, often involving lots of data.<br><br>
 					(Un)fortunately, I've been a team-of-one designer for most of my career. This means I'm also very much a researcher, project manager, product owner,
 					visual designer, and design evangelist.</p>
 			</div>
@@ -42,8 +42,12 @@
 				<h1>Developer Experience</h1>
 			</div>
 			<div class="dx-copy">
-				<p>At <a class="body-link" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
+				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="dx">
+				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.</p><br>
+				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
+					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Airflow</a>), allowing engineers to create, schedule,
+					and monitor complex <a class="body-link" target="_blank" href="https://spark.apache.org">Spark</a> workflows.</p>
 			</div>
 		</div>
 		<!----------------------AVIATION------------------------->
@@ -53,8 +57,13 @@
 				<h1>Aviation</h1>
 			</div>
 			<div class="aviation-copy">
-				<p>At <a class="body-link" href="https://boeing.com">Boeing</a>, I created analysis and data visualization tools to help engineers and analysts do more with their data.</p>
+				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
 				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
+				<p>This included dashboards to evaluate projected aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
+					help airlines reduce operating costs.</p><br>
+				<p>I designed a disruption management application to help airline operation centers track
+					flight status and mitigate delays.</p><br>
+				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
 		</div>
 		<!----------------------DATAVIZ------------------------->
@@ -64,9 +73,9 @@
 				<h1>Data Visualization</h1>
 			</div>
 			<div class="dataviz-copy">
-				<p>As a data designer for an atomic startup, I created many interactive data dashboards for our primary client, Boeing.</p>
+				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
 				<img class="dataviz-img" src="images/dataviz.svg" alt="dataviz">
-				<p>Outside of client work, I had a lot of fun creating <a class="body-link" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
+				<p>Outside of client work, I had a lot of fun creating <a class="body-link" target="_blank" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
 					to promote our company in the open data community.</p><br>
 				<p>Here, I refined my own design and development process, learned to roll with the ambiguity and chaos that is
 					startup life, and also leveled up in navigating the intricacies of a massive organization like Boeing.</p>
@@ -79,11 +88,11 @@
 				<h1>Vision Science</h1>
 			</div>
 			<div class="vision-science-copy">
-				<p>At the <a class="body-link" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
-					<a class="body-link" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and worked on research projects
-					that explored interesting quirks with human visual perception.</p><br>
+				<p>At the <a class="body-link" target="_blank" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
+					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
+					that explored interesting quirks with visual perception.</p><br>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="vision-science">
-				<p>On one project, we created data visualization using radical encodings such as luminance and orientation,
+				<p><a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">On one project</a>, we created data visualization using radical encodings such as luminance and orientation,
 				to see whether people can effectively understand correlation from those unconventional charts.</p><br>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
 			</div>
@@ -93,16 +102,19 @@
 	</div>
 
 	<div class="navigation">
-
-		<nav class="nav">
-			<p> <a class="nav-link" href="#hello-link">Hello</a>&nbsp;&bull;
-					<a class="nav-link" href="#tldr-link">TL;DR</a>&nbsp;&bull;
-					<a class="nav-link" href="#dx-link">DX</a>&nbsp;&bull;
-					<a class="nav-link" href="#aviation-link">Aviation</a>&nbsp;&bull;
-					<a class="nav-link" href="#dataviz-link">DataViz</a>&nbsp;&bull;
-					<a class="nav-link" href="#vision-science-link">Vision Science</a>
-			</p>
-		</nav>
+		<ul class="nav">
+			<li><a class="nav-link" href="#hello-link">Hello</a><li>
+			<div class="bullet">&bull;</div>
+			<li><a class="nav-link" href="#tldr-link">TL;DR</a></li>
+			<div class="bullet">&bull;</div>
+			<li><a class="nav-link" href="#dx-link">DX</a></li>
+			<div class="bullet">&bull;</div>
+			<li><a class="nav-link" href="#aviation-link">Aviation</a></li>
+			<div class="bullet">&bull;</div>
+			<li><a class="nav-link" href="#dataviz-link">DataViz</a></li>
+			<div class="bullet">&bull;</div>
+			<li><a class="nav-link" href="#vision-science-link">Vision Science</a></li>
+		</ul>
 
 		<nav class="bottom-nav">
 			<a class="social" href="https://www.linkedin.com/in/jsschn" target="_blank">
