--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<div class="dx-copy">
 				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="dx">
-				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.</p><br>
+				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
 				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
 					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Airflow</a>), allowing engineers to create, schedule,
 					and monitor complex <a class="body-link" target="_blank" href="https://spark.apache.org">Spark</a> workflows.</p>
@@ -60,9 +60,9 @@
 				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
 				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
 				<p>This included dashboards to evaluate projected aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
-					help airlines reduce operating costs.</p><br>
+					help airlines reduce operating costs.<br><br></p>
 				<p>I designed a disruption management application to help airline operation centers track
-					flight status and mitigate delays.</p><br>
+					flight status and mitigate delays.<br><br></p>
 				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
 				<img class="dataviz-img" src="images/dataviz.svg" alt="dataviz">
 				<p>Outside of client work, I had a lot of fun creating <a class="body-link" target="_blank" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
-					to promote our company in the open data community.</p><br>
+					to promote our company in the open data community.<br><br></p>
 				<p>Here, I refined my own design and development process, learned to roll with the ambiguity and chaos that is
 					startup life, and also leveled up in navigating the intricacies of a massive organization like Boeing.</p>
 			</div>
@@ -90,10 +90,10 @@
 			<div class="vision-science-copy">
 				<p>At the <a class="body-link" target="_blank" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
 					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
-					that explored interesting quirks with visual perception.</p><br>
+					that explored interesting quirks with visual perception.<br><br></p>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="vision-science">
 				<p><a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">On one project</a>, we created data visualization using radical encodings such as luminance and orientation,
-				to see whether people can effectively understand correlation from those unconventional charts.</p><br>
+				to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
 			</div>
 		</div>
