fixed dataviz spacing for mobile

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 				</p><br>
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
-			<div class="hello-copy-disclaimer">Due to NDAs, you won't find details of my work
-				on B2B solutions and internal platforms here. <a class="body-link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
+			<div class="hello-copy-disclaimer">Due to NDAs, I can't publish details of my work
+				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
 		</div>
 		<!---------------------------TL;DR------------------------->
 		<div class="tldr">
@@ -59,9 +59,9 @@
 			<div class="aviation-copy">
 				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
 				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
-				<p>This included dashboards to evaluate projected aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
+				<p>This included dashboards to forecast aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
 					help airlines reduce operating costs.<br><br></p>
-				<p>I designed a disruption management application to help airline operation centers track
+				<p>I designed a <a class="body-link" href="https://ww2.jeppesen.com/network-and-operations-management/ops-advisor/">disruption management application</a> to help airline operation centers track
 					flight status and mitigate delays.<br><br></p>
 				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
