refactored body content styling

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="hello">
 			<a id="hello-link"> </a>
 			<div class="hello-title">Hello,</div>
-			<div class="hello-copy">
+			<div class="body-copy">
 				<p>My name is Jessie (she/her).
 					I'm a Taiwanese-Canadian product designer from Vancouver, currently living as a polite expat in San Francisco.</p><br>
 					I design <a class="link" href="#dx-link">developer experience</a> for Apple.<br>
@@ -21,14 +21,14 @@
 				</p><br>
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
-			<div class="hello-copy-disclaimer">Due to NDAs, I can't publish details of my work
+			<div class="disclaimer">Due to NDAs, I can't publish details of my work
 				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
 		</div>
 		<!---------------------------TL;DR------------------------->
 		<div class="tldr">
 			<a id="tldr-link"> </a>
 				<div class="tldr-title">TL;DR</div>
-			<div class="tldr-copy">
+			<div class="body-copy">
 				<p>I'm a generalist. I understand that different kinds of chaos can feel very similar, whether at a startup or a
 					monolithic enterprise.<br><br> I've designed complex systems, often involving lots of data.<br><br>
 					(Un)fortunately, I've been a team-of-one designer for most of my career. This means I'm also very much a researcher, project manager, product owner,
@@ -38,10 +38,9 @@
 		<!----------------------DX------------------------->
 		<div class="dx">
 			<a id="dx-link"> </a>
-			<div class="dx-title">
-				<h1>Developer Experience</h1>
-			</div>
-			<div class="dx-copy">
+			<div class="date">Nov 2018 – Present</div>
+			<div class="title">Developer Experience</div>
+			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="dx">
 				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
@@ -53,10 +52,9 @@
 		<!----------------------AVIATION------------------------->
 		<div class="aviation">
 			<a id="aviation-link"> </a>
-			<div class="aviation-title">
-				<h1>Aviation</h1>
-			</div>
-			<div class="aviation-copy">
+			<div class="date">Jan 2014 – Sep 2018</div>
+			<div class="title">Aviation</div>
+			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
 				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
 				<p>This included dashboards to forecast aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
@@ -69,10 +67,9 @@
 		<!----------------------DATAVIZ------------------------->
 		<div class="dataviz">
 			<a id="dataviz-link"> </a>
-			<div class="dataviz-title">
-				<h1>Data Visualization</h1>
-			</div>
-			<div class="dataviz-copy">
+			<div class="date">Jan 2014 – Dec 2015</div>
+			<div class="title">Data Visualization</div>
+			<div class="body-copy">
 				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
 				<img class="dataviz-img" src="images/dataviz.svg" alt="dataviz">
 				<p>Outside of client work, I had a lot of fun creating <a class="body-link" target="_blank" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
@@ -84,15 +81,14 @@
 		<!----------------------VISION SCIENCE------------------------->
 		<div class="vision-science">
 			<a id="vision-science-link"> </a>
-			<div class="vision-science-title">
-				<h1>Vision Science</h1>
-			</div>
-			<div class="vision-science-copy">
+			<div class="date">Sep 2011 – Apr 2014</div>
+			<div class="title">Vision Science</div>
+			<div class="body-copy">
 				<p>At the <a class="body-link" target="_blank" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
 					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
 					that explored interesting quirks with visual perception.<br><br></p>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="vision-science">
-				<p><a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">On one project</a>, we created data visualization using radical encodings such as luminance and orientation,
+				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">project</a>, we created data visualization using radical encodings such as luminance and orientation,
 				to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
 			</div>
@@ -116,7 +112,7 @@
 			<li><a class="nav-link" href="#vision-science-link">Vision Science</a></li>
 		</ul>
 
-		<nav class="bottom-nav">
+		<nav class="social-nav">
 			<a class="social" href="https://www.linkedin.com/in/jsschn" target="_blank">
   			<img src="images/linkedin.svg" alt="LinkedIn" style="width:20px;height:20px;padding:8px;border:0;"></a>
 			<a class="social" href="https://www.twitter.com/jeckenzie" target="_blank">
