got rid of individual body styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<!----------------------DX------------------------->
-		<div class="dx">
+		<div class="body-container">
 			<a id="dx-link"> </a>
 			<div class="date">Nov 2018 – Present</div>
 			<div class="title">Developer Experience</div>
@@ -50,7 +50,7 @@
 			</div>
 		</div>
 		<!----------------------AVIATION------------------------->
-		<div class="aviation">
+		<div class="body-container">
 			<a id="aviation-link"> </a>
 			<div class="date">Jan 2014 – Sep 2018</div>
 			<div class="title">Aviation</div>
@@ -65,7 +65,7 @@
 			</div>
 		</div>
 		<!----------------------DATAVIZ------------------------->
-		<div class="dataviz">
+		<div class="body-container">
 			<a id="dataviz-link"> </a>
 			<div class="date">Jan 2014 – Dec 2015</div>
 			<div class="title">Data Visualization</div>
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 		<!----------------------VISION SCIENCE------------------------->
-		<div class="vision-science">
+		<div class="body-container">
 			<a id="vision-science-link"> </a>
 			<div class="date">Sep 2011 – Apr 2014</div>
 			<div class="title">Vision Science</div>
