fixed alignment and spacing for mobile views

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				Read my <a class="link" href="#tldr-link">TL;DR</a>.
 			</div>
 			<div class="disclaimer">Due to NDAs, I can't publish details of my work
-				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com">Contact me</a> to learn more.</div>
+				on B2B solutions and internal services. <a class="body-link" href="mailto:itsjessiechen@gmail.com" target="_blank">Contact me</a> to learn more.</div>
 		</div>
 		<!---------------------------TL;DR------------------------->
 		<div class="tldr">
@@ -42,7 +42,7 @@
 			<div class="title">Developer Experience</div>
 			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
-				<img class="dx-img" src="images/dx.svg" alt="dx">
+				<img class="dx-img" src="images/dx.svg" alt="A box containing overflowing tool-like objects, including databases, marbles, and microchips.">
 				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
 				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
 					and workflow management feature for our PaaS (similar to <a class="body-link" target="_blank" href="https://airflow.apache.org">Airflow</a>), allowing engineers to create, schedule,
@@ -56,7 +56,7 @@
 			<div class="title">Aviation</div>
 			<div class="body-copy">
 				<p>At <a class="body-link" target="_blank" href="https://boeing.com">Boeing</a>, I created data products to help engineers and analysts do more with numbers.</p>
-				<img class="aviation-img" src="images/aviation.svg" alt="aviation">
+				<img class="aviation-img" src="images/aviation.svg" alt="An aircraft travelling in the southwest direction.">
 				<p>This included dashboards to forecast aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
 					help airlines reduce operating costs.<br><br></p>
 				<p>I designed a <a class="body-link" href="https://ww2.jeppesen.com/network-and-operations-management/ops-advisor/">disruption management application</a> to help airline operation centers track
@@ -64,14 +64,14 @@
 				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
 		</div>
-		<!----------------------DATAVIZ------------------------->
+		<!----------------------DATAVIs------------------------->
 		<div class="body-container">
-			<a id="dataviz-link"> </a>
+			<a id="datavis-link"> </a>
 			<div class="date">Jan 2014 – Dec 2015</div>
-			<div class="title">Data Visualization</div>
+			<div class="title">DataVis</div>
 			<div class="body-copy">
 				<p>As a data designer for an <a class="body-link" target="_blank" href="https://www.engagedata.ca">atomic startup</a>, I created many interactive data dashboards for our primary client, Boeing.</p>
-				<img class="dataviz-img" src="images/dataviz.svg" alt="dataviz">
+				<img class="dataviz-img" src="images/dataviz.svg" alt="A stack of papers, with the frontmost page containing a hybrid area and line chart.">
 				<p>Outside of client work, I had a lot of fun creating <a class="body-link" target="_blank" href="https://public.tableau.com/profile/jessie.chen#!/">data stories</a>
 					to promote our company in the open data community.<br><br></p>
 				<p>Here, I refined my own design and development process, learned to roll with the ambiguity and chaos that is
@@ -80,14 +80,14 @@
 		</div>
 		<!----------------------VISION SCIENCE------------------------->
 		<div class="body-container">
-			<a id="vision-science-link"> </a>
+			<a id="vision-science-link"></a>
 			<div class="date">Sep 2011 – Apr 2014</div>
 			<div class="title">Vision Science</div>
 			<div class="body-copy">
 				<p>At the <a class="body-link" target="_blank" href="https://www.ubc.ca">University of British Columbia</a>, I managed the
 					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
 					that explored interesting quirks with visual perception.<br><br></p>
-				<img class="vision-science-img" src="images/vision-science.svg" alt="vision-science">
+				<img class="vision-science-img" src="images/vision-science.svg" alt="An eye with elaborate eyelashes on the left-hand side.">
 				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">project</a>, we created data visualization using radical encodings such as luminance and orientation,
 				to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
@@ -107,7 +107,7 @@
 			<div class="bullet">&bull;</div>
 			<li><a class="nav-link" href="#aviation-link">Aviation</a></li>
 			<div class="bullet">&bull;</div>
-			<li><a class="nav-link" href="#dataviz-link">DataViz</a></li>
+			<li><a class="nav-link" href="#datavis-link">DataVis</a></li>
 			<div class="bullet">&bull;</div>
 			<li><a class="nav-link" href="#vision-science-link">Vision Science</a></li>
 		</ul>
