--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="date">Nov 2018 – Present</div>
 			<div class="title">Developer Experience</div>
 			<div class="body-copy">
-				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service Postgres offering.</p>
+				<p>At <a class="body-link" target="_blank" href="https://apple.com">Apple</a>, I conducted user research and usability testing prior to the launch of an internal self-service PostgresSQL offering.</p>
 				<img class="dx-img" src="images/dx.svg" alt="A box containing overflowing tool-like objects, including databases, marbles, and microchips.">
 				<p>I designed oss.apple.com, an internal website to promote contributions to open source projects within the Apple community.<br><br></p>
 				<p>To help iTunes and Maps engineers manage a large number of data processing jobs, I designed a task scheduling
@@ -59,7 +59,7 @@
 				<img class="aviation-img" src="images/aviation.svg" alt="An aircraft travelling in the southwest direction.">
 				<p>This included dashboards to forecast aircraft life cycles, market evaluation tools for estimating flight disruption costs, and fuel efficiency dashboards to
 					help airlines reduce operating costs.<br><br></p>
-				<p>I designed a <a class="body-link" href="https://ww2.jeppesen.com/network-and-operations-management/ops-advisor/">disruption management application</a> to help airline operation centers track
+				<p>I designed a <a class="body-link" target="_blank" href="https://ww2.jeppesen.com/network-and-operations-management/ops-advisor/">disruption management application</a> to help airline operation centers track
 					flight status and mitigate delays.<br><br></p>
 				<p>I introduced a new design system to revamp legacy analytics applications that help engineers monitor and anticipate aircraft maintenance issues.</p>
 			</div>
@@ -88,8 +88,8 @@
 					<a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/">Visual Cognition Lab</a> and led research projects
 					that explored interesting quirks with visual perception.<br><br></p>
 				<img class="vision-science-img" src="images/vision-science.svg" alt="An eye with elaborate eyelashes on the left-hand side.">
-				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">project</a>, we created data visualization using radical encodings such as luminance and orientation,
-				to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
+				<p>On one <a class="body-link" target="_blank" href="https://viscoglab.psych.ubc.ca/research/visual-perception-of-correlation/">data visualization project</a>, we used radical encodings like luminance and
+					orientation to see whether people can effectively understand correlation from those unconventional charts.<br><br></p>
 				<p>I programmed experiments, conducted trials, performed statistical analysis, and had a blast making data beautiful and meaningful.</p>
 			</div>
 		</div>
