added responsive menu icon

--- a/index.html
+++ b/index.html
@@ -111,14 +111,17 @@
 			<div class="bullet">&bull;</div>
 			<li><a class="nav-link" href="#vision-science-link">Vision Science</a></li>
 		</ul>
-
 		<nav class="social-nav">
-			<a class="social" href="https://www.linkedin.com/in/jsschn" target="_blank">
-  			<img src="images/linkedin.svg" alt="LinkedIn" style="width:20px;height:20px;padding:8px;border:0;"></a>
-			<a class="social" href="https://www.twitter.com/jeckenzie" target="_blank">
-  			<img src="images/twitter.svg" alt="Twitter" style="width:22px;height:22px;padding:8px;border:0;"></a>
-			<a class="social" href="mailto:itsjessiechen@gmail.com" target="_blank">
-  			<img src="images/mail.svg" alt="Email" style="width:20px;height:20px;padding:8px;border:0;"></a>
+			<a href="javascript:void(0);" class="menu-icon" onclick="openMenu()">
+    		<img src="images/menu.svg" alt="Menu Icon" style="width:20px;height:20px;padding:8px;border:0;"></a>
+			<div class="social-group">
+				<a class="social-link" href="https://www.linkedin.com/in/jsschn" target="_blank">
+		  		<img src="images/linkedin.svg" alt="LinkedIn" style="width:20px;height:20px;padding:8px;border:0;"></a>
+				<a class="social-link" href="https://www.twitter.com/jeckenzie" target="_blank">
+		  		<img src="images/twitter.svg" alt="Twitter" style="width:22px;height:22px;padding:8px;border:0;"></a>
+				<a class="social-link" href="mailto:itsjessiechen@gmail.com" target="_blank">
+		  		<img src="images/mail.svg" alt="Email" style="width:20px;height:20px;padding:8px;border:0;"></a>
+			</div>
 		</nav>
 	</div>
 </body>
