centered copyright text

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			</div>
 		</div>
 		<!----------------------COPYRIGHT------------------------->
-		<div class="copyright">Copyright 2019 © Jessie Chen. Built with HTML & CSS on Github Pages.</div>
+		<div class="copyright"><center>Copyright 2019 © Jessie Chen.<br> Built with HTML & CSS on Github Pages.<center></div>
 	</div>
 
 	<div class="navigation">
